# restaurant_rating_prediction

./: .gitignore  Makefile  README.md  pyproject.toml  requirements.txt
flask_app/: app.py  model.py
flask_app/static/: style.css
flask_app/templates/: index.html
notebooks/: 00_abstract.ipynb  01_EDA.ipynb  02_ml_modelling.ipynb
src/: datatransform.py  main.py  predict_job.py  train_job.py
utils/: download_data.sh
