[tool.poetry]
name = "restaurant-pipeline"
version = "0.1.0"
description = "This project aims to build a MLOps pipeline"
authors = ["Pedro-A-D-S <pedroalves0409@gmail.com>"]
license = "MIT"
readme = "README.md"
packages = [
    {include = "src"},
    {include = "tests"},
    {include = "utils"}
]

[tool.poetry.dependencies]
python = "^3.10"
pandas = "^2.1.3"
scikit-learn = "^1.3.2"
pyyaml = "^6.0.1"

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.3"
dvc = "^3.30.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
